--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ sentencepiece>=0.1.99
 tensorrt==10.1.0
 # https://github.com/pytorch/pytorch/blob/v2.3.1/version.txt uses 2.3.0a0.
 # https://docs.nvidia.com/deeplearning/frameworks/pytorch-release-notes/rel-24-05.html#rel-24-05 uses 2.4.0a0.
-torch>=2.3.0a0,<=2.4.0a0
+torch==2.4.0.dev20240612+cu124
 nvidia-modelopt~=0.11,<0.12
 transformers>=4.38.2
 pillow==10.2.0
